<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editBaseUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_base_url"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/editDashboardId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dashboard_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/editUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTenantId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tenant_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/editRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_role"
            android:inputType="text" />

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_open" />
    </LinearLayout>
</ScrollView>
